<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Virtual Card Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mail_button">Email</string>
    <string name="title_activity_detail_view">DetailView</string>
    <string name="call_button">Call</string>
    <string name="message_button">SMS</string>
    <string name="map_button">Locate</string>
    <string name="title_activity_locate">LocateActivity</string>
    <string name="LinkedIn_Icon">LinkedIn</string>
    <string name="prompt_username">Enter Username</string>
    <string name="Register_button">Register</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="prompt_user">Username</string>
    <string name="title_activity_make_card">MakeCard</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_edit_card">Edit_card</string>
    <string name="add_card_button">Add a Card</string>
    <string name="title_activity_add_card">Add a Card..</string>
    <string name="add_prompt">Enter the username of the person you want to add:</string>
    <string name="sign_in_button">Sign In</string>
    <string name="add">Add</string>
    <string name="telephone">Telephone:</string>
    <string name="title_activity_list_cards">ListCardsActivity</string>
    <string name="Blank">" "</string>
    <string name="view_all_card">View Cards</string>
    <string name="edit_my_card">Edit My Card</string>
    <string name="delete_button">Delete</string>
    <string name="editPhoto">Edit Photo</string>
    <string name="addPhotoButton">Add Photo</string>
    <string name="name">Name:</string>
    <string name="designation">Designation:</string>
    <string name="company">Company:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="submit_button">Submit</string>
    <string name="prompt_pass">Enter Password</string>
    <string name="title_show_image">Your image</string>
    <string name="title_activity_add_card_options">AddCardOptionsActivity</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="web">Web</string>
    <string name="title_activity_add_via_bluetooth">AddViaBluetooth</string>
    <string name="share">Share</string>
    <string name="start_listening">Listen for cards</string>

</resources>