<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:contentDescription="@string/title_activity_add_card"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Options" >

    <ImageButton
        android:id="@+id/add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/title_activity_add_card"
        android:onClick="onClick1"
        android:src="@drawable/user_add"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_image"
        android:layout_centerHorizontal="true"
        android:text="@string/add_card_button"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_all_card_image"
        android:layout_below="@+id/view_all_card_image"
        android:text="@string/view_all_card"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/view_all_card_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:contentDescription="@string/title_activity_edit_card"
        android:onClick="onClick2"
        android:src="@drawable/viewall" 
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_my_card"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/edit_card_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:contentDescription="@string/title_activity_edit_card"
        android:onClick="onClick3"
        android:src="@drawable/edit_card_image" />

</RelativeLayout>